--- a/Homepage.html
+++ b/Homepage.html
@@ -19,7 +19,7 @@
             <p><strong>I'm<mark>&nbsp;Gyan Ratan</mark></strong></p>
             <p>An Undergraduate Student<br> pursuing B.Tech In Computer Science Engineering <br>from <code> Institute Of Technology, Ghaziabad.</code></p>
             <div class="button-container">
-                <a href="#"><img src="/resources/icon/github.png"></a><a href="##"><img src="/resources/icon/linkedin.png"></a><a href="##%"><img src="/resources/icon/email.png"></a>
+                <a href="#"><img src="resources/icon/github.png"></a><a href="##"><img src="resources/icon/linkedin.png"></a><a href="##%"><img src="resources/icon/email.png"></a>
         </div>
         </div>
     </div>
