--- a/Homepage.html
+++ b/Homepage.html
@@ -16,7 +16,7 @@
         <div class="profile-container"></div>
         <div class="intro-text">
             <p>HELLO</p>
-            <p><strong>I'm<mark>&nbsp;Harsh Tyagi</mark></strong></p>
+            <p><strong>I'm<mark>&nbsp;Gyan Ratan</mark></strong></p>
             <p>An Undergraduate Student<br> pursuing B.Tech In Computer Science Engineering <br>from <code> Institute Of Technology, Ghaziabad.</code></p>
             <div class="button-container">
                 <a href="#"><img src="resources/icon/github.png"></a><a href="##"><img src="resources/icon/linkedin.png"></a><a href="##%"><img src="resources/icon/email.png"></a>
